day2_Mask_R-CNN
Mask R-CNN 수정

--- a/Day2/2_02_Mask_R-CNN_object_Recognition/MASK_R_CNN(HOT).ipynb
+++ b/Day2/2_02_Mask_R-CNN_object_Recognition/MASK_R_CNN(HOT).ipynb
@@ -17,10 +17,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "B_AeHbFHyR6l"
+      },
+      "source": [
+        "#<font color=blue>**Mask R-CNN 객체 인식 실습**</font>\r\n",
+        "각 셀을 순서대로 shift + ENTER로 실행"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Mw7o_C2aye9W"
       },
       "source": [
-        "# <font color=blue>**Mask R-CNN을 적용하기위한 적절한 라이브러리 설치 진행**</font>\r\n",
+        "## <font color=green>**Mask R-CNN을 적용하기위한 적절한 라이브러리 설치 진행**</font>\r\n",
         "####<font color=red>런타임이 초기화시 재설치 진행</font>"
       ]
     },
@@ -124,7 +134,7 @@
         "id": "rt3qo64Z0X5q"
       },
       "source": [
-        "#<font color=blue>**구글 드라이브로 경로 이동**</font>"
+        "##<font color=green>**구글 드라이브로 경로 이동**</font>"
       ]
     },
     {
@@ -156,7 +166,7 @@
         "id": "p5aK35Jx0mpu"
       },
       "source": [
-        "#<font color=blue>**git의 Mask R-CNN 설치**</font>"
+        "##<font color=green>**git의 Mask R-CNN 설치**</font>"
       ]
     },
     {
@@ -193,7 +203,7 @@
         "id": "gOl5KYxD1RmB"
       },
       "source": [
-        "#<font color=blue>**미리 학습된 COCO Weight 설치**</font>"
+        "##<font color=green>**미리 학습된 COCO Weight 설치**</font>"
       ]
     },
     {
@@ -264,7 +274,7 @@
         "id": "bcrzjQb14oVG"
       },
       "source": [
-        "#<font color=blue>**Mask R-CNN 실습 코드**</font>"
+        "##<font color=green>**Mask R-CNN 실습 코드**</font>"
       ]
     },
     {
@@ -273,7 +283,7 @@
         "id": "E8rtkpyw6j1u"
       },
       "source": [
-        "###<font color=green>라이브러리 및 경로 설정</font>"
+        "####<font color=red>라이브러리 및 경로 설정</font>"
       ]
     },
     {
@@ -338,7 +348,7 @@
         "id": "ITyu72hY657v"
       },
       "source": [
-        "###<font color=green>GPU 적용 설정 및 기본 설정 구성</font>\r\n",
+        "####<font color=red>GPU 적용 설정 및 기본 설정 구성</font>\r\n",
         "\r\n",
         "\r\n"
       ]
@@ -430,7 +440,7 @@
         "id": "7Lymvg2U7Etp"
       },
       "source": [
-        "###<font color=green>Mask R-CNN 모델 구축</font>"
+        "####<font color=red>Mask R-CNN 모델 구축</font>"
       ]
     },
     {
@@ -504,7 +514,7 @@
         "id": "Vy5jeky47Q5S"
       },
       "source": [
-        "###<font color=green>Class Name 설정</font>"
+        "####<font color=red>Class Name 설정</font>"
       ]
     },
     {
@@ -539,7 +549,7 @@
         "id": "fD1D_6DI7Xj6"
       },
       "source": [
-        "###<font color=green>폴더 경로 내 이미지에 Mask R-CNN 적용</font>"
+        "####<font color=red>폴더 경로 내 이미지에 Mask R-CNN 적용</font>"
       ]
     },
     {
@@ -599,8 +609,8 @@
         "id": "J_EZJSiQ8YGN"
       },
       "source": [
-        "##<font color=green>지정한 이미지에 Mask R-CNN 적용</font>\r\n",
-        "####<font color=red>image = skimage.io.imread('적용하고자하는 이미지 경로')</font>"
+        "####<font color=red>지정한 이미지에 Mask R-CNN 적용</font>\r\n",
+        "image = skimage.io.imread('적용하고자하는 이미지 경로')"
       ]
     },
     {
@@ -659,8 +669,9 @@
         "id": "hXcMeNA6NfgS"
       },
       "source": [
-        "#<font color=blue>**Mask R-CNN 영상 실습**</font>\r\n",
-        "##<font color=green>영상에 Mask R-CNN 적용하기 위한 함수 구성</font>\r\n",
+        "##<font color=green>**Mask R-CNN 영상 실습**</font>\r\n",
+        "\r\n",
+        "####<font color=red>영상에 Mask R-CNN 적용하기 위한 함수 구성</font>\r\n",
         "def random_colors():\r\n",
         "\r\n",
         "  개별 객체에 적용하기 위한 무작위 색 지정\r\n",
@@ -740,9 +751,10 @@
         "id": "UpG16GOHFI-V"
       },
       "source": [
-        "##<font color=blue>**영상 데이터에 Mask R-CNN 객체 인식 적용**</font>\r\n",
-        "####<font color=red>capture = cv2.VideoCapture('적용하고자하는 비디오데이터')\r\n",
-        "####<font color=red>적용된 영상은 video_masked.avi로 저장</font>"
+        "####<font color=red>영상 데이터에 Mask R-CNN 객체 인식 적용</font>\r\n",
+        "capture = cv2.VideoCapture('적용하고자하는 비디오데이터')\r\n",
+        "\r\n",
+        "적용된 영상은 video_masked.avi로 저장"
       ]
     },
     {
