--- a/Day2/2_02_Mask_R-CNN_object_Recognition/MASK_R_CNN(HOT).ipynb
+++ b/Day2/2_02_Mask_R-CNN_object_Recognition/MASK_R_CNN(HOT).ipynb
@@ -28,6 +28,39 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "_CZxR22KW8Gi"
+      },
+      "source": [
+        "##<font color=green>**구글 드라이브 연결**</font>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-4AUCPfVXjGI",
+        "outputId": "0777c6cf-a01e-4c91-de60-e11605423b74"
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Mw7o_C2aye9W"
       },
       "source": [
