--- a/Day2/2_04_YOLO_object_Recognition/YOLO(HOT).ipynb
+++ b/Day2/2_04_YOLO_object_Recognition/YOLO(HOT).ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of YOLO(HOT).ipynb",
+      "name": "Copy of Copy of YOLO(HOT).ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +41,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-4AUCPfVXjGI",
-        "outputId": "223c0843-9a7e-471c-ea0e-7c1b2fd0e7ca"
+        "outputId": "e1118bac-9b13-4666-d1ee-806b934a6c4f"
       },
       "source": [
         "from google.colab import drive\r\n",
@@ -51,7 +52,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -1420,7 +1421,7 @@
         "outputId": "548f2a00-8abb-41ab-910f-2af1a6410d36"
       },
       "source": [
-        "!./darknet detector demo cfg/coco.data cfg/yolov3.cfg yolov3.weights -dont_show 0015_fps_10.mp4 -out_filename yolo_video.avi"
+        "!./darknet detector demo cfg/coco.data cfg/yolov3.cfg yolov3.weights -dont_show KITTI_data.mp4 -out_filename yolo_video.avi"
       ],
       "execution_count": null,
       "outputs": [
