--- a/Day2/객체인식대회/객체인식대회(YOLO).ipynb
+++ b/Day2/객체인식대회/객체인식대회(YOLO).ipynb
@@ -3,14 +3,14 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "객체인식대회(YOLO).ipynb",
-      "provenance": []
+      "name": "Copy of 객체인식대회(YOLO).ipynb",
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -34,26 +34,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-4AUCPfVXjGI",
-        "outputId": "8f5f9200-a6a5-418a-cc66-a3dd179588d0"
+        "id": "-4AUCPfVXjGI"
       },
       "source": [
         "from google.colab import drive\r\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -68,67 +56,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zaIEuAaSF68R",
-        "outputId": "6a38120f-06bf-49ac-8957-2bb46c7ebf8b"
+        "id": "zaIEuAaSF68R"
       },
       "source": [
         "cd drive/MyDrive/darknet/"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive/MyDrive/darknet\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "os3Y2ec6hXDj"
-      },
-      "source": [
-        "##<font color=green>**yolov3 convolution layer 모델 설치**</font>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dOt8vBFjZ78l",
-        "outputId": "1773a0bd-fd52-47ae-cc70-920b9a0c194a"
-      },
-      "source": [
-        "!wget https://pjreddie.com/media/files/darknet53.conv.74"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2021-01-17 00:16:18--  https://pjreddie.com/media/files/darknet53.conv.74\n",
-            "Resolving pjreddie.com (pjreddie.com)... 128.208.4.108\n",
-            "Connecting to pjreddie.com (pjreddie.com)|128.208.4.108|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 162482580 (155M) [application/octet-stream]\n",
-            "Saving to: ‘darknet53.conv.74.1’\n",
-            "\n",
-            "darknet53.conv.74.1 100%[===================>] 154.96M  9.86MB/s    in 16s     \n",
-            "\n",
-            "2021-01-17 00:16:35 (9.66 MB/s) - ‘darknet53.conv.74.1’ saved [162482580/162482580]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -140,63 +74,57 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lUTgvTfXqlMO"
-      },
-      "source": [
-        "17GJj5XoLYMw_DxvH486BV8c08ycExRWn"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Lwl1MW78qsnK",
-        "outputId": "128c900d-876c-411b-e658-14e24db4f6ac"
+        "id": "Lwl1MW78qsnK"
       },
       "source": [
         "%cd data/\r\n",
         "!gdown --id 1_MLsDHKmoPSLBe3WuN1jrLWAvQoaOvQ2 --output BDD_data.zip"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading...\n",
-            "From: https://drive.google.com/uc?id=1_MLsDHKmoPSLBe3WuN1jrLWAvQoaOvQ2\n",
-            "To: /content/drive/My Drive/darknet/BDD_data.zip\n",
-            "346MB [00:04, 81.7MB/s]\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J98LtalawGoa"
+      },
+      "source": [
+        "####<font color=red>업로드한 BDD_data.zip 압축풀기"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LQbpNvF0q_a9",
-        "outputId": "26b527fc-57af-4304-ac91-7c95d9328906"
+        "id": "LQbpNvF0q_a9"
       },
       "source": [
         "!unzip BDD_data.zip"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Archive:  BDD_data.zip\n",
-            "replace bdd.data? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
-          ],
-          "name": "stdout"
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p9dnzgAc44AX"
+      },
+      "source": [
+        "##<font color=green>**YOLO 학습 파라미터 수정**</font>\r\n",
+        "drive/MyDrive/darknet/data 폴더안에 있는 yolov3-bdd100k.cfg 파일의 파라미터 값을 수정\r\n",
+        "\r\n",
+        "PDF 강의 자료 참고"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MJx5CTU2wZ_w"
+      },
+      "source": [
+        "##<font color=green>**버클리 데이터 YOLO 학습 진행**\r\n",
+        "Loss 그래프는 실시간으로 확인 X"
       ]
     },
     {
@@ -205,7 +133,71 @@
         "id": "5Cxwp4eNtQdo"
       },
       "source": [
-        "!./darknet detector train data/bdd.data data/yolov3-bdd100k.cfg darknet53.conv.74 -dont_show"
+        "%cd ..\r\n",
+        "!./darknet detector train data/bdd.data data/yolov3-bdd100k.cfg data/darknet53.conv.74 -dont_show"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "72w1eV2hxa7I"
+      },
+      "source": [
+        "####<font color=red>학습된 Loss 그래프 확인"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OeaZIu5kxT6P"
+      },
+      "source": [
+        "def imShow(path):\r\n",
+        "  import cv2\r\n",
+        "  import matplotlib.pyplot as plt\r\n",
+        "  %matplotlib inline\r\n",
+        "\r\n",
+        "  image = cv2.imread(path)\r\n",
+        "  height, width = image.shape[:2]\r\n",
+        "  resized_image = cv2.resize(image,(3*width, 3*height), interpolation = cv2.INTER_CUBIC)\r\n",
+        "\r\n",
+        "  fig = plt.gcf()\r\n",
+        "  fig.set_size_inches(18, 10)\r\n",
+        "  plt.axis(\"off\")\r\n",
+        "  plt.imshow(cv2.cvtColor(resized_image, cv2.COLOR_BGR2RGB))\r\n",
+        "  plt.show()\r\n",
+        "\r\n",
+        "imShow('chart.png')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "POpqDguex3pC"
+      },
+      "source": [
+        "####<font color=red>대회 결과 다운로드</font>\r\n",
+        "Loss 그래프\r\n",
+        "\r\n",
+        "파라미터 설정한 yolov3-bdd100k.cfg\r\n",
+        "\r\n",
+        "학습되어 도출된 weight값"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uGEi8sFdw4qd"
+      },
+      "source": [
+        "from google.colab import files\r\n",
+        "files.download('chart.png')\r\n",
+        "files.download('data/yolov3-bdd100k.cfg')\r\n",
+        "files.download('backup/yolov3-bdd100k_final.weights')"
       ],
       "execution_count": null,
       "outputs": []
