--- a/Day2/2_04_YOLO_object_Recognition/YOLO(HOT).ipynb
+++ b/Day2/2_04_YOLO_object_Recognition/YOLO(HOT).ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of Copy of YOLO(HOT).ipynb",
+      "name": "Copy of Copy of Copy of YOLO(HOT).ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -6450,7 +6450,7 @@
       },
       "source": [
         "from google.colab import files\r\n",
-        "files.download('video_masked.avi')"
+        "files.download('yolo_video.avi')"
       ],
       "execution_count": null,
       "outputs": []
