--- a/Day2/2_05_CV_Object_Tracking/CV_object_tracking.ipynb
+++ b/Day2/2_05_CV_Object_Tracking/CV_object_tracking.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "CV_object_tracking.ipynb",
+      "name": "Copy of CV_object_tracking.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -47,7 +48,7 @@
         "from google.colab import drive\r\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,6 +57,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Adj8Fs97g-R7"
+      },
+      "source": [
+        "##<font color=green>**object_tracking 폴더 생성 및 이동**</font>"
       ]
     },
     {
@@ -71,7 +81,7 @@
         "%mkdir drive/MyDrive/CV_object_tracking\r\n",
         "%cd drive/MyDrive/CV_object_tracking"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +113,7 @@
       "source": [
         "!gdown --id 1KfSuoleDfYbIoFUasiyCWDLGqrfwLaNG --output cv_tracking.zip"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +139,7 @@
       "source": [
         "!unzip cv_tracking.zip"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +214,7 @@
         "\r\n",
         "cap.release()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,7 +231,7 @@
         "from google.colab import files\r\n",
         "files.download('book_output.avi')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -320,7 +330,7 @@
         "fourcc = cv2.VideoWriter_fourcc(*'DIVX')\r\n",
         "out = cv2.VideoWriter('./motorcycle_output.avi', fourcc, 30.0, (int(width), int(height)))\r\n",
         "\r\n",
-        "trackWindow = (513, 228, 47, 58)\r\n",
+        "trackWindow = (513, 228, 43, 53)\r\n",
         "RoI = frame[trackWindow[1]:trackWindow[1] + trackWindow[3], trackWindow[0]:trackWindow[0] + trackWindow[2]]\r\n",
         "RoI = cv2.cvtColor(RoI, cv2.COLOR_BGR2HSV)\r\n",
         "RoI_hist = cv2.calcHist([RoI], [0], None, [180], [0, 180])\r\n",
@@ -346,7 +356,7 @@
         "\r\n",
         "cap.release()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +373,7 @@
         "from google.colab import files\r\n",
         "files.download('motorcycle_output.avi')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
