--- a/Day1/1_08_DL_LineDetection/DLline.ipynb
+++ b/Day1/1_08_DL_LineDetection/DLline.ipynb
@@ -39,6 +39,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "fMeypUVZJeUT"
+      },
+      "source": [
+        "!git clone https://github.com/SESL-KMU/Autonomous-AI.git"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PdHHDvnXtahE"
       },
       "source": [
