--- a/Day2/객체인식대회/객체인식대회(YOLO).ipynb
+++ b/Day2/객체인식대회/객체인식대회(YOLO).ipynb
@@ -190,7 +190,18 @@
       },
       "source": [
         "##<font color=green>**버클리 데이터 YOLO 학습 진행**\r\n",
-        "Loss 그래프는 실시간으로 확인 X"
+        "Loss 그래프는 실시간으로 확인 불가!\r\n",
+        "\r\n",
+        "충분한 시간동안 진행해야 weight가 생성됩니다"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1b3XcEa42CVQ"
+      },
+      "source": [
+        "아래 셀은 처음 학습을 진행할 때 사용하는 코드"
       ]
     },
     {
@@ -200,6 +211,28 @@
       },
       "source": [
         "!./darknet detector train data/bdd.data data/yolov3-bdd100k.cfg data/darknet53.conv.74 -dont_show"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-vGDFRNH2NG2"
+      },
+      "source": [
+        "아래 셀은 학습을 진행해서 얻은 weight에 이어서 학습을 진행할 때 사용하는 코드\r\n",
+        "계정을 전환했을 때 사용하세요\r\n",
+        "계정을 전환할 때 이동시킬 것 : 수정한 cfg 파일, 학습 결과로 나온 weight"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "utd7r-vI2MLh"
+      },
+      "source": [
+        "!./darknet detector train data/bdd.data data/yolov3-bdd100k.cfg backup/yolov3-bdd100k_last.weights -dont_show"
       ],
       "execution_count": null,
       "outputs": []
