--- a/Day1/1_08_DL_LineDetection/DLline.ipynb
+++ b/Day1/1_08_DL_LineDetection/DLline.ipynb
@@ -10,20 +10,51 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_MJ09naBjfA3"
+      },
+      "source": [
+        "#<font color=blue>**딥러닝 차선 인식 실습**</font>\n",
+        "\n",
+        "\n",
+        "각 셀을 순서대로 shift + ENTER로 실행"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Qu0Fo5-ju48"
+      },
+      "source": [
+        "##<font color=green>**구글 드라이브 연결**</font>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
         "id": "G2ahZ7bf0hll"
       },
       "source": [
-        "from google.colab import drive\r\n",
+        "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f9XyEVbEjyAl"
+      },
+      "source": [
+        "##<font color=green>**구글 드라이브로 경로 이동**</font>"
+      ]
     },
     {
       "cell_type": "code",
@@ -39,6 +70,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "kYNTEdOpojn8"
+      },
+      "source": [
+        "%cd /content/drive/MyDrive/"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bz4qCuk6j2G9"
+      },
+      "source": [
+        "##<font color=green>**git의 Autonomous-AI 설치**</font>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "fMeypUVZJeUT"
       },
       "source": [
@@ -46,6 +97,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "raEMEsmZlEsQ"
+      },
+      "source": [
+        "##<font color=green>**딥러닝 차선 인식 코드 경로로 이동**</font>"
+      ]
     },
     {
       "cell_type": "code",
@@ -59,27 +119,14 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Premi72yukq1"
+        "id": "StUthkT-lItz"
       },
       "source": [
-        "import tensorflow as tf\r\n",
-        "tf.__version__"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "p034SSSEv0Qs"
-      },
-      "source": [
-        "!pip uninstall tensorflow"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## <font color=green>**딥러닝 차선인식을 적용하기위한 적절한 라이브러리 설치 진행**</font>\n",
+        "####<font color=red>런타임이 초기화시 재설치 진행</font>"
+      ]
     },
     {
       "cell_type": "code",
@@ -87,7 +134,7 @@
         "id": "h-rdya9OwH6q"
       },
       "source": [
-        "!pip install tensorflow==1.15.0"
+        "!pip install tensorflow==1.15.0 gast==0.3.2"
       ],
       "execution_count": null,
       "outputs": []
@@ -95,29 +142,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yDjOLgwDzQ51"
-      },
-      "source": [
-        "!pip install gast==0.3.2"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4DTRM3XqwrtM"
-      },
-      "source": [
-        "%cd /content/drive/MyDrive/Autonomous-AI/Day1/1_08_DL_LineDetection/"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1XdPis8quXTJ"
+        "id": "WPbD2b2KjWeo"
       },
       "source": [
         "!pip install -r requirements.txt"
@@ -126,33 +151,17 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ljr7ZnHbw57f"
+        "id": "BTnISmRTlXE9"
       },
       "source": [
-        "!pip list"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "## <font color=green>**딥러닝 차선 인식 실습 진행**</font>"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5-GkpJHwxlET"
-      },
-      "source": [
-        "pwd"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "background_save": true
-        },
         "id": "MToJCByfuRe8"
       },
       "source": [
