Mask_RCNN & DeepSort 수정

--- a/Day2/2_06_DeepSORT_object_Tracking/DeepSort_object_tracking.ipynb
+++ b/Day2/2_06_DeepSORT_object_Tracking/DeepSort_object_tracking.ipynb
@@ -20,7 +20,7 @@
         "id": "T_VEJOvauU3o"
       },
       "source": [
-        "#<font color=blue>**객체추적 실습**</font>\r\n",
+        "#<font color=blue>**객체추적 실습**</font>\n",
         "각 셀을 순서대로 shift + ENTER로 실행"
       ]
     },
@@ -39,7 +39,7 @@
         "id": "-4AUCPfVXjGI"
       },
       "source": [
-        "from google.colab import drive\r\n",
+        "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "execution_count": null,
@@ -51,9 +51,20 @@
         "id": "Hu_11J2Xu6g4"
       },
       "source": [
-        "##<font color=green>**필요한 라이브러리 설치**</fiont>\r\n",
+        "##<font color=green>**필요한 라이브러리 설치**</fiont>\n",
         "####<font color=red>(run time이 초기화될 때마다 재설치 진행)</font>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "24AjNqcUHMjV"
+      },
+      "source": [
+        "!pip uninstall -y keras-nightly tensorflow"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -61,7 +72,7 @@
         "id": "80mQInA_ulLP"
       },
       "source": [
-        "!pip install tensorboard==1.15.0 tensorflow==1.15.0 tensorflow-estimator==1.15.1 tensorflow-gpu==1.15.2 tensorflow-gpu-estimator==2.1.0 Keras==2.2.5 Keras-Applications==1.0.8 Keras-Preprocessing==1.1.0 imutils"
+        "!pip install tensorboard==1.15.0 tensorflow==1.15.0 tensorflow-estimator==1.15.1 tensorflow-gpu==1.15.2 tensorflow-gpu-estimator==2.1.0 Keras==2.2.5 Keras-Applications==1.0.8 Keras-Preprocessing==1.1.0 h5py==2.10.0 imutils"
       ],
       "execution_count": null,
       "outputs": []
@@ -81,7 +92,7 @@
         "id": "-WA1QlbQjJhN"
       },
       "source": [
-        "%cd drive/MyDrive/\r\n",
+        "%cd drive/MyDrive/\n",
         "!git clone https://github.com/SESL-KMU/Autonomous-AI.git"
       ],
       "execution_count": null,
@@ -122,7 +133,10 @@
         "id": "uXzSG6pSvpZR"
       },
       "source": [
-        "!wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights"
+        "import os\n",
+        "\n",
+        "if not os.path.exists('yolov4.weights'):\n",
+        "  !wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights"
       ],
       "execution_count": null,
       "outputs": []
@@ -142,7 +156,8 @@
         "id": "kdm-l88JxNsz"
       },
       "source": [
-        "!python convert.py"
+        "if not os.path.exists('./model_data/yolo4.h5'):\n",
+        "  !python convert.py"
       ],
       "execution_count": null,
       "outputs": []
@@ -182,8 +197,8 @@
         "id": "7OKZfSuwCUBk"
       },
       "source": [
-        "####<font color=red>!python demo.py <객체 추적을 진행하고자하는 영상></font>\r\n",
-        "\r\n",
+        "####<font color=red>!python demo.py <객체 추적을 진행하고자하는 영상></font>\n",
+        "\n",
         "result 폴더 내에 tracking된 영상이 저장됨"
       ]
     },
@@ -210,88 +225,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aU9C-49Gqxo_",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "dd4fd513-acba-42ff-d1c9-1252ce0ce907"
+        "id": "aU9C-49Gqxo_"
       },
       "source": [
-        "from google.colab import files\r\n",
+        "from google.colab import files\n",
         "files.download('video_masked.avi')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_bd907b25-d61b-427b-9809-3b1b130a1f64\", \"video_masked.avi\", 19263932)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yxbysj8iG-T8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
